# oop-learning

./: .gitignore  1.cpp  CMakeLists.txt  README.md
coding1/problem1/: CMakeLists.txt  CommandPara.cpp  CommandPara.h  CommandParser.cpp  CommandParser.h  MyApp.cpp  MyApp.h  Operation.cpp  Operation.h  OperationAdd.cpp  OperationAdd.h  OperationConcat.cpp  OperationConcat.h  OperationHelp.cpp  OperationHelp.h  OperationRed.cpp  OperationRed.h  main.cpp
coding1/problem2/: CMakeLists.txt  Gender.cpp  Gender.h  Lang.h  main.cpp
coding1/problem3/: CMakeLists.txt  NumArray.cpp  NumArray.h  NumArrayItem.cpp  NumArrayItem.h  main.cpp
coding1/problem4/: CMakeLists.txt  Input.cpp  Input.h  KeyChar.cpp  KeyChar.h  ProcessString.h  Singleton.h  main.cpp
coding2/problem1/: CMakeLists.txt  Date.cpp  Date.h  main.cpp
coding2/problem2/: CMakeLists.txt  Utility.cpp  Utility.h  main.cpp
coding2/problem3/: B.cpp  B.h  CMakeLists.txt  main.cpp
coding2/problem4/: CMakeLists.txt  Container.cpp  Container.h  main.cpp
coding2/problem5/: CMakeLists.txt  main.cpp
coding2/problem5/task1/: main.cpp
coding2/problem5/task2/: main.cpp  ushort_to_float32.cpp  ushort_to_float32.h
coding2/problem5/task3/: Parser.cpp  Parser.h  main.cpp
coding2/problem6/: ABC.cpp  ABC.h  CMakeLists.txt  D.cpp  D.h  main.cpp
coding2/problem6/task1/: ABC.h  main.cpp
coding2/problem6/task2/: ABC.h  main.cpp
coding2/problem6/task3/: ABC.h  main.cpp
coding2/problem7/: CMakeLists.txt  ExtString.cpp  ExtString.h  main.cpp
final/: CMakeLists.txt  test1.cpp  test2.cpp
final/include/: Application.h  Scene.h
final/include/Data/: DataGetter.h  DataLoader.h  DataLoaderSudoku.h  DataMaker.h  DataProcessor.h  DataSaver.h
final/include/Input/: InputMessage.h  InputProcessor.h  InputReceiver.h  InputReceiverConsole.h
final/include/Logic/: Block.h  Cell.h  Column.h  LogicBlock.h  LogicCell.h  LogicColumn.h  LogicGroup.h  LogicRow.h  LogicSudoku.h  Row.h  Sudoku.h
final/include/Output/: OutputContent.h  OutputDisplayer.h  OutputDisplayerConsole.h  OutputProcessor.h
final/include/Scene/: Scene.h  SceneChoseLevel.h  SceneGame.h  SceneMainMenu.h  SceneSetting.h  SceneSettingFromGame.h  SceneSettingFromMainMenu.h
final/include/UI/: UI.h  UIButton.h  UISudoku.h
final/include/Utils/: Singleton.h
final/src/: Application.cpp  Block.cpp  Cell.cpp  Column.cpp  Row.cpp  Scene.cpp  Sudoku.cpp
final/src/Data/: DataGetter.cpp  DataLoader.cpp  DataLoaderSudoku.cpp  DataMaker.cpp  DataProcessor.cpp  DataSaver.cpp
final/src/Input/: InputMessage.cpp  InputReceiver.cpp  InputReceiverConsole.cpp
final/src/Logic/: Block.cpp  Cell.cpp  Column.cpp  LogicBlock.cpp  LogicCell.cpp  LogicColumn.cpp  LogicGroup.cpp  LogicRow.cpp  LogicSudoku.cpp  Row.cpp  Sudoku.cpp
final/src/Output/: OutputContent.cpp  OutputDisplayer.cpp  OutputDisplayerConsole.cpp
final/src/Scene/: Scene.cpp  SceneChoseLevel.cpp  SceneGame.cpp  SceneMainMenu.cpp  SceneSetting.cpp  SceneSettingFromGame.cpp  SceneSettingFromMainMenu.cpp
final/src/UI/: UI.cpp  UIButton.cpp  UISudoku.cpp
final/src/Utils/: Singleton.cpp
finetune/: 2.cpp
model/: 1.cpp
