cmake_minimum_required(VERSION 3.29)
project(final)

set(CMAKE_CXX_STANDARD 14)

add_executable(final test1.cpp
        src/Logic/LogicCell.cpp
        include/Logic/LogicCell.h
        src/Logic/LogicRow.cpp
        include/Logic/LogicRow.h
        src/Logic/LogicColumn.cpp
        include/Logic/LogicColumn.h
        src/Logic/LogicBlock.cpp
        include/Logic/LogicBlock.h
        src/Logic/LogicSudoku.cpp
        include/Logic/LogicSudoku.h
        src/Application.cpp
        include/Application.h
        src/Scene/Scene.cpp
        include/Scene/Scene.h
        src/Input/InputReceiver.cpp
        include/Input/InputReceiver.h
        src/Input/InputReceiverConsole.cpp
        include/Input/InputReceiverConsole.h
        src/Input/InputMessage.cpp
        include/Input/InputMessage.h
        src/Output/OutputDisplayer.cpp
        include/Output/OutputDisplayer.h
        src/Output/OutputDisplayerConsole.cpp
        include/Output/OutputDisplayerConsole.h
        src/Output/OutputContent.cpp
        include/Output/OutputContent.h
        src/UI/UI.cpp
        include/UI/UI.h
        src/UI/UIButton.cpp
        include/UI/UIButton.h
        src/UI/UISudoku.cpp
        include/UI/UISudoku.h
        src/Scene/SceneMainMenu.cpp
        include/Scene/SceneMainMenu.h
        src/Scene/SceneSetting.cpp
        include/Scene/SceneSetting.h
        src/Scene/SceneChoseLevel.cpp
        include/Scene/SceneChoseLevel.h
        src/Scene/SceneGame.cpp
        include/Scene/SceneGame.h
        src/Scene/SceneSettingFromMainMenu.cpp
        include/Scene/SceneSettingFromMainMenu.h
        src/Scene/SceneSettingFromGame.cpp
        include/Scene/SceneSettingFromGame.h
        src/Data/DataProcessor.cpp
        include/Data/DataProcessor.h
        src/Data/DataSaver.cpp
        include/Data/DataSaver.h
        src/Data/DataGetter.cpp
        include/Data/DataGetter.h
        src/Data/DataLoaderSudoku.cpp
        include/Data/DataLoaderSudoku.h
        src/Data/DataLoader.cpp
        include/Data/DataLoader.h
        include/Input/InputProcessor.h
        include/Output/OutputProcessor.h
        src/Logic/LogicGroup.cpp
        include/Logic/LogicGroup.h
        src/Utils/Singleton.cpp
        include/Utils/Singleton.h
        test2.cpp)
